# rulehawk

./: .gitignore  .rulehawkignore  LICENSE.txt  MANIFEST.in  README.md  RULEHAWK_COMPLIANCE.md  RULEHAWK_SETUP_GUIDE.md  codebase-rules.md  mcp.json  pyproject.toml  rulehawk.yaml  rulehawkignore  setup.py
.github/workflows/: ci.yml  pr-check.yml
dev/: design.md  release-checklist.md  test_what_works.py  todo.md
docs/: README.md  cli.md  codebase-rules.md  configuration.md  files.md  installation-guide.md  integration.md  mcp.md  overview.md  quickstart.md  style-guide.md
rulebird/: .gitignore  README.md  __init__.py  cli.py  requirements.txt  setup.py  test_rulebird.py
rulebird/config/: __init__.py  loader.py
rulebird/integrations/: __init__.py  ai_bridge.py
rulebird/rules/: __init__.py  runner.py  validators.py
rulehawk/: .gitignore  README.md  __init__.py  cli.py  integrator.py  memory.py  run_tests.py  setup.py  test_rulehawk.py  verifier.py
rulehawk/config/: __init__.py  loader.py  yaml_loader.py
rulehawk/detection/: __init__.py  base.py  cpp_detector.py  javascript_detector.py  python_detector.py
rulehawk/docs/: architecture.md  command-structure.md  command-usage.md  custom-rules.md  introduction.md  rule-exceptions.md  simplified-modes.md  when-to-use-modes.md
rulehawk/integrations/: __init__.py  ai_bridge.py
rulehawk/mcp/: __init__.py  interactive_server.py  server.py  tools.py
rulehawk/rules/: __init__.py  enhanced_runner.py  registry.py  runner.py  validators.py
rulehawk/tests/: test_config.py  test_registry.py  test_validators.py
